{
    "name": "InputActions",
    "maps": [
        {
            "name": "Combat",
            "id": "ba5b5499-d6a9-4241-bf0f-8031d8d2aa72",
            "actions": [
                {
                    "name": "SelectTile",
                    "type": "Button",
                    "id": "f8eecc69-e871-4ccf-a1b8-373dbb654f1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f6dea3b5-fc76-44c2-b6be-0385f62c3cb2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CancelAction",
                    "type": "Button",
                    "id": "103ae896-8143-4457-9066-7fc5f465d8e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillQ",
                    "type": "Button",
                    "id": "d1c7c020-4cf8-456c-bc33-b317b95f119a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillW",
                    "type": "Button",
                    "id": "5fd4f7ee-ebd5-4570-935f-41081c109fcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillE",
                    "type": "Button",
                    "id": "0b8285fa-6eab-4165-89f3-adcc842e3b0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillR",
                    "type": "Button",
                    "id": "7b8d34e9-18e5-4e4b-9610-099c8ee78984",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15821045-dc3b-4a3c-aa83-d70c2a91d70b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SelectTile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23b0fcce-63de-4aff-835e-d1813a99acc9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "CancelAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55972330-33ca-4fa8-b057-c38d3dccc6a9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ceadfe5-8070-40e2-9fba-bdaba2d590b5",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SkillQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f358433a-f1c4-44a9-9bf5-712fdfad52c1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SkillW",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "573bc2be-ccda-4268-bcd0-b80cd418d87b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SkillE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72af10a7-f76f-42f9-a267-a667a37f88e6",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SkillR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "ade0c86a-263f-45ac-ac40-3cec5f68605b",
            "actions": [
                {
                    "name": "Skip Cutscene",
                    "type": "Button",
                    "id": "1404d139-152a-4790-90d3-e4100f4e6cf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Menu",
                    "type": "Button",
                    "id": "f237e37c-2a2e-44cc-a5a8-51332ee83841",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart Scene",
                    "type": "Button",
                    "id": "4a05a982-e2b9-4378-a2a3-91ac793cc994",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c3ec64c-6118-4dff-b1f8-81df1e72453a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Skip Cutscene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4d00963-9efb-40a6-a615-17d1539ae989",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Open Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1371407-8066-4d54-950f-15129d509681",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Restart Scene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}